Now generating direct install QRCode

--- a/modules/ota-library/src/main/resources/template.html
+++ b/modules/ota-library/src/main/resources/template.html
@@ -17,6 +17,7 @@
  * limitations under the License.
  * #L%
 -->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html><head>
     <title>Over The Air Deployment</title>
 
@@ -117,6 +118,8 @@
     </td>
   </tr>
 </table>
+
+<img src="$plistUrl?action=qrcode"/>
 
 <img src="$htmlQrcodeUrl"/>
 
