--- a/modules/ota-library/src/main/resources/buildTemplate.html
+++ b/modules/ota-library/src/main/resources/buildTemplate.html
@@ -17,6 +17,7 @@
  * limitations under the License.
  * #L%
 -->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
 
