--- a/modules/ota-library/src/main/resources/template.html
+++ b/modules/ota-library/src/main/resources/template.html
@@ -21,6 +21,21 @@
 <html><head>
     <title>Over The Air Deployment</title>
 
+		<script type="text/javascript">
+		  //REMOVING IFRAME
+		  try {
+		    //Exception when accessing outer frame parent location from different domain
+		    var parentHref = parent.location.href;
+		    //No Exception, either frame removed already or using OTA Service in same domain
+			if(parentHref != document.location.href) {
+			  parent.location.href = document.location.href;
+			}
+		  } catch (e) {
+		    //Get rid of iFrame, reload window with iFrame page
+			parent.location.href = document.location.href;
+		  }
+		</script>
+
 		<style>
 			body {
 				font-family: Sans Serif, Helvetica, Arial;
