Since iOS 7.1 https is required for over-the-air deployment

--- a/modules/ota-library/src/main/resources/template.html
+++ b/modules/ota-library/src/main/resources/template.html
@@ -146,7 +146,9 @@
 
 		</style>
 		
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.pack.js"></script>
+		<!-- jquery has to be located on the OTA server in order to comply with the same-origin policy.
+		     Download from e.g. http://en.wikipedia.org/wiki/Same-origin_policy -->
+		<script type="text/javascript" src="jquery-latest.pack.js"></script>
 		
 		<script type="text/javascript">
 			
