Introduced "applicationBaseUrl" parameter
...to be able to use https URLs even if OTA
service is referenced with http URL (e.g. in old
install.htm pages generated in older builds).
Since iOS 7.1 OTA has to use https!

--- a/modules/ota-library/src/main/resources/template.html
+++ b/modules/ota-library/src/main/resources/template.html
@@ -146,9 +146,9 @@
 
 		</style>
 		
-		<!-- jquery has to be located on the OTA server in order to comply with the same-origin policy.
-		     Download from e.g. http://en.wikipedia.org/wiki/Same-origin_policy -->
-		<script type="text/javascript" src="jquery-latest.pack.js"></script>
+		<!-- jquery has to be located on the OTA server in order to comply with the same-origin policy (http://en.wikipedia.org/wiki/Same-origin_policy).
+		     Download from e.g. http://code.jquery.com/jquery-latest.pack.js and save in <webapps>/ota.libraries/jquery-latest.pack.js -->
+		<script type="text/javascript" src="/ota-libraries/jquery-latest.pack.js"></script>
 		
 		<script type="text/javascript">
 			
